# CryoET

./: .gitignore  README.md  file_testing.py  main.py  pyproject.toml  pyrightconfig.json  unet.py
CryoET Object Identification copy/test/static/ExperimentRuns/TS_5_4/VoxelSpacing10.000/: 0.0  0.1  0.2  0.3  0.4  0.5  0.6  0.7  0.8  0.9  1.0  1.1  1.2  1.3  1.4  1.5  1.6  1.7  1.8  1.9  2.0  2.1  2.2  2.3  2.4  2.5  2.6  2.7  2.8  2.9  3.0  3.1  3.2  3.3  3.4  3.5  3.6  3.7  3.8  3.9  (+60 more)
src/: main.py
src/models/: UNet.py  parts.py
src/utils/: ZarrDataset.py  zarr_dataset.py
