[tool.poetry]
name = "cryoet"
version = "0.1.0"
description = ""
authors = ["cldrake01 <collinlindendrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
zarr = "^2.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
