[tool.poetry]
name = "cryoet"
version = "0.1.0"
description = ""
authors = ["cldrake01 <collinlindendrake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
zarr = "^2.18.3"
zarrdataset = "^0.2.0"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
